# aws-deepracer-follow-the-leader-sample-project

./: CONTRIBUTING.md  README.md  download-and-convert-object-detection-model.md  getting-started.md
.github/: PULL_REQUEST_TEMPLATE.md
deepracer_follow_me_ws/: .rosinstall  install_dependencies.sh  start_follow_me.sh
deepracer_follow_me_ws/ctrl_pkg/: README.md  package.xml
deepracer_follow_me_ws/ctrl_pkg/include/ctrl_pkg/: ctrl_state.hpp  ctrl_state_base.hpp
deepracer_follow_me_ws/ctrl_pkg/src/: ctrl_node.cpp  ctrl_state.cpp
deepracer_follow_me_ws/deepracer_interfaces_pkg/: CMakeLists.txt  README.md
deepracer_follow_me_ws/deepracer_interfaces_pkg/msg/: CameraMsg.msg  EvoSensorMsg.msg
deepracer_follow_me_ws/deepracer_interfaces_pkg/srv/: ActiveStateSrv.srv  BatteryLevelSrv.srv  BeginSoftwareUpdateSrv.srv  EnableStateSrv.srv  GetCtrlModesSrv.srv  GetDeviceInfoSrv.srv  InferenceStateSrv.srv  ModelOptimizeSrv.srv  SetCalibrationSrv.srv  SetFollowMeMaxSpeedSrv.srv  SetLedCtrlSrv.srv  SetStatusLedBlinkSrv.srv  SetStatusLedSolidSrv.srv  VerifyModelReadySrv.srv
deepracer_follow_me_ws/follow_me_launcher/: CMakeLists.txt  README.md  package.xml
deepracer_follow_me_ws/follow_me_launcher/launch/: follow_me_launcher.py
deepracer_follow_me_ws/follow_me_navigation_pkg/: README.md  package.xml  setup.cfg  setup.py
deepracer_follow_me_ws/follow_me_navigation_pkg/follow_me_navigation_pkg/: constants.py  follow_me_navigation_node.py
deepracer_follow_me_ws/follow_me_navigation_pkg/launch/: follow_me_navigation_pkg_launch.py
deepracer_follow_me_ws/object_detection_pkg/: README.md  setup.cfg
deepracer_follow_me_ws/object_detection_pkg/launch/: object_detection_pkg_launch.py
deepracer_follow_me_ws/object_detection_pkg/object_detection_pkg/: object_detection_node.py  utils.py
deepracer_follow_me_ws/webserver_pkg/: README.md  package.xml
deepracer_follow_me_ws/webserver_pkg/webserver_pkg/: calibration.py  constants.py  led_api.py  login.py  models.py  utility.py  vehicle_control.py  webserver_publisher_node.py  wifi_settings.py
deepracer_follow_the_leader_ws/: .rosinstall  install_dependencies.sh
deepracer_follow_the_leader_ws/ctrl_pkg/: CMakeLists.txt  README.md
deepracer_follow_the_leader_ws/ctrl_pkg/include/ctrl_pkg/: ctrl_state.hpp
deepracer_follow_the_leader_ws/ctrl_pkg/launch/: ctrl_pkg_launch.py
deepracer_follow_the_leader_ws/ctrl_pkg/src/: ctrl_node.cpp  ctrl_state.cpp
deepracer_follow_the_leader_ws/deepracer_interfaces_pkg/: CMakeLists.txt  README.md  package.xml
deepracer_follow_the_leader_ws/deepracer_interfaces_pkg/msg/: DetectionDeltaMsg.msg  InferResults.msg  InferResultsArray.msg  NetworkConnectionStatus.msg  ServoCtrlMsg.msg  SoftwareUpdatePctMsg.msg  USBFileSystemNotificationMsg.msg
deepracer_follow_the_leader_ws/deepracer_interfaces_pkg/srv/: ConsoleModelActionSrv.srv  GetCalibrationSrv.srv  GetLedCtrlSrv.srv  GetModelLoadingStatusSrv.srv  LidarConfigSrv.srv  LoadModelSrv.srv  ModelStateSrv.srv  NavThrottleSrv.srv  OTGLinkStateSrv.srv  SensorStatusCheckSrv.srv  ServoGPIOSrv.srv  SetMaxSpeedSrv.srv  SoftwareUpdateCheckSrv.srv  SoftwareUpdateStateSrv.srv  USBFileSystemSubscribeSrv.srv  USBMountPointManagerSrv.srv  VideoStateSrv.srv
deepracer_follow_the_leader_ws/ftl_launcher/: CMakeLists.txt  README.md  package.xml
deepracer_follow_the_leader_ws/ftl_launcher/launch/: ftl_launcher.py
deepracer_follow_the_leader_ws/ftl_navigation_pkg/: README.md  package.xml  setup.cfg  setup.py
deepracer_follow_the_leader_ws/ftl_navigation_pkg/ftl_navigation_pkg/: constants.py  ftl_navigation_node.py  utils.py
deepracer_follow_the_leader_ws/ftl_navigation_pkg/launch/: ftl_navigation_pkg_launch.py
deepracer_follow_the_leader_ws/object_detection_pkg/: README.md  package.xml  setup.py
deepracer_follow_the_leader_ws/object_detection_pkg/object_detection_pkg/: constants.py  object_detection_node.py
deepracer_follow_the_leader_ws/webserver_pkg/: README.md  setup.cfg  setup.py
deepracer_follow_the_leader_ws/webserver_pkg/launch/: webserver_pkg_launch.py
deepracer_follow_the_leader_ws/webserver_pkg/webserver_pkg/: constants.py  device_info_api.py  software_update.py  ssh_api.py  vehicle_control.py  vehicle_logs.py  webserver.py  webserver_publisher_node.py  wifi_settings.py
installers/: build_and_install_ftl_application.sh  enable_ftl_mode.sh  install_object_detection_model.sh  run_ftl_application.sh
