<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctrl_pkg</name>
  <version>0.0.1</version>
  <description>
    This package contains control node that acts as a main hub to manage
    different exclusive functionalities in different vehicle states
    like manual mode, calibration mode and autonomous mode.
  </description>
  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>deepracer_interfaces_pkg</depend>
  <depend>camera_pkg</depend>
  <depend>servo_pkg</depend>
  <depend>inference_pkg</depend>
  <depend>model_optimizer_pkg</depend>
  <depend>deepracer_navigation_pkg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
